syntax = "proto3";

package rpz;

option go_package = "github.com/dnswlt/hackz/rpz/rpzpb;rpzpb";

import "google/protobuf/timestamp.proto";

service ItemService {
  rpc CreateItem (CreateItemRequest) returns (Item);
  rpc GetItem (GetItemRequest) returns (Item);
}

message Item {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp timestamp = 3;
  // Printable ASCII characters of random payload.
  string payload = 4;
}

message CreateItemRequest {
  string id = 1;
  string name = 2;
}

message GetItemRequest {
  string id = 1;
}
